--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
-node_modules/
-frontend/node_modules/
 backend/node_modules/
-frontend/build/
+backend/.env
 backend/dist/
+backend/uploads/
+backend/logs/
+
+frontend/node_modules/
+frontend/build/
+frontend/.env
+
 .env
-.env.local/
+.DS_Store
+Thumb.db
+.vscode/
+.idea/
